--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="uk" class="no-js" prefix="og: http://ogp.me/ns#">
 <head>
     <!-- Google tag (gtag.js) - Analytics 4-->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9FSPGRKYB9"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8YPS985256"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-9FSPGRKYB9');
+  gtag('config', 'G-8YPS985256');
 </script>
     
     <!-- Безпека: CSP та заголовки -->
